--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -7,7 +7,7 @@ on:
 env:
   IMAGE_REGISTRY_URL: ghcr.io
   ###############################################
-  ### Replace <username> with GitHub username ###
+  ### Replace wszoltysek with GitHub username ###
   ###############################################
   DOCKER_IMAGE_NAME: wszoltysek-azure-ttt
   AZURE_WEBAPP_NAME: wszoltysek-ttt-app
